--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </ul>
     </nav>
     <div id="welcome-section" class="container">
-      <h1 id="title">I am Afif Ahsan</h1>
+      <h1 id="title">I am Celestin</h1>
       <p class="lead"><em>a full-stack web developer</em></p>
     </div>
   </header>
@@ -137,9 +137,10 @@
   <footer id="main-footer">
     <div class="container">
       <p>&copy; Copyright Free</p>
-      <p id="creator">This site recreated by <a href="https://github.com/FreeCodeCamp-Solutions/">FreeCodeCamp-Solutions</a></p>
+      <p id="creator"><a href="https://github.com/FreeCodeCamp-Solutions/"></a></p>
     </div>
   </footer>
 </body>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
+
